--- a/src/main/webapp/WEB-INF/templateEmpresa/footer.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/footer.xhtml
@@ -7,7 +7,7 @@
 
 
 
-<div class="footer" align="right" style="margin-top: 1%" >
+<div class="footerr" align="right" style="margin-top: 3%" >
 	<p:panel styleClass="footer" style=" height: 5%;background: #DF0101">
         <p style="font-size: 15; color: #FFFFFF">Copyright &copy;2018 El Ber1zera de la Quebrada</p>   
         </p:panel>
