--- a/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
@@ -48,7 +48,7 @@
 		
 
 	</p:toolbar>
-	<p:progressBar id="pbi" style="height:8px" mode="indeterminate"/>
+	<p:progressBar id="pbi" style="height:8px" mode="indeterminate" rendered="false"/>
 </h:form>
 
 
