--- a/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
@@ -48,8 +48,8 @@
 	</div>
 	
 	
-    <div class="footer">
-		<ui:insert name="footer">
+    <div class="footerr">
+		<ui:insert name="footerr">
 			<ui:include src="/WEB-INF/templateEmpresa/footer.xhtml"></ui:include>
 		</ui:insert>
 	</div>
