--- a/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/templateEmpresa.xhtml
@@ -47,13 +47,13 @@
 		</ui:insert>
 	</div>
 	
-	
-    <div class="footerr">
-		<ui:insert name="footerr">
-			<ui:include src="/WEB-INF/templateEmpresa/footer.xhtml"></ui:include>
-		</ui:insert>
+	<div align="right" style="position:fixed; bottom:2px; width:100%;">
+		<p:panel styleClass="footer" style=" height: 35px;background: #DF0101">
+        <p style="font-size: 15; color: #FFFFFF">Copyright &copy;2018 El Ber1zera de la Quebrada</p>   
+        </p:panel>
+		
 	</div>
-    
+	
 
 	<script
 		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
