--- a/src/main/webapp/telas-adm/homeADM.xhtml
+++ b/src/main/webapp/telas-adm/homeADM.xhtml
@@ -9,7 +9,7 @@
 
 	<ui:define name="css">
 		<link rel="stylesheet" type="text/css"
-			href="resources/css/homeADM.css" />
+			href="/secv/resources/css/homeADM.css" />
 	</ui:define>
 
 	<ui:define name="title">Home ADM</ui:define>
@@ -20,40 +20,29 @@
 		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 
-		<h:panelGrid columns="2" border="1" style="border-block-end:0px">
-
-			<p:chart type="line" model="#{chartsMBean.lineModel}"
-				style="height:400px; width:680px; 
-	margin-right:97px; margin-left:90px; 
-	margin-top:44px; 
-	margin-bottom:44px" />
-
-			<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
-				style="height:380px; width:630px; 
-	margin-right:90px; margin-left:140px; 
-	margin-top:38px; 
-	margin-bottom:48px" />
-
-		</h:panelGrid>
-		<h:panelGrid columns="2" border="1">
-
-			<p:chart type="bar" model="#{chartBarMBean.barModel}"
-				style="height:400px; width:680px; 
-	margin-right:97px; margin-left:90px; 
-	margin-top:43px; 
-	margin-bottom:43px" />
-
-			<p:chart type="bar" model="#{chartLineMBean.horizontalBarModel}"
-				style="height:400px; width:680px; 
-	margin-right:90px; margin-left:90px; 
-	margin-top:43px; 
-	margin-bottom:44px" />
-
-		</h:panelGrid>
-
-
+		<p:panelGrid border="1" style="width:100%;height:100%;border-block-end:0px">
+			<p:row>
+				<p:column style="width:50%;height:50%">
+					<p:chart type="line" model="#{chartsMBean.lineModel}"
+						style="height:100%; width:100%;" />
+				</p:column>
+				<p:column style="width:50%;height:50%">
+					<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
+						style="height:100%; width:100%;" />
+				</p:column>
+			</p:row>
+			<p:row>
+				<p:column style="width:50%;height:50%">
+					<p:chart type="bar" model="#{chartBarMBean.barModel}"
+						style="height:100%; width:100%;" />
+				</p:column>
+				<p:column style="width:50%;height:50%">
+					<p:chart type="bar" model="#{chartLineMBean.horizontalBarModel}"
+						style="height:100%; width:100%;"/>
+				</p:column>
+			</p:row>
+			</p:panelGrid>
 	</ui:define>
-
 </ui:composition>
 
 </html>
