--- a/src/main/webapp/telas-empresa/curriculo.xhtml
+++ b/src/main/webapp/telas-empresa/curriculo.xhtml
@@ -47,7 +47,7 @@
 	<p:panel>
 		<center>
 			<h3>Informações Pessoais</h3>
-			<h:outputLabel value="Nome: #{listarCurriculoMBean.selectcl.nomeDoAluno}" />
+			<h:outputLabel value="Nome: #{listarCurriculoMBean.cur.nomeDoAluno}" />
 			<br />
 			<h:outputLabel value="Email: #{a}" />
 			<br />
