--- a/src/main/webapp/telas-empresa/temfiltro.xhtml
+++ b/src/main/webapp/telas-empresa/temfiltro.xhtml
@@ -178,7 +178,11 @@
 									<p:column id="Impressão" style="width:60px">
 										<p:commandButton icon="ui-icon-print" ajax="false"
 											action="curriculo?faces-redirect=true"
-											onclick="this.form.target='_blank'" />
+											onclick="this.form.target='_blank'" >
+											
+												<f:setPropertyActionListener value="#{cl}" target="#{listarCurriculoMBean.cur}"></f:setPropertyActionListener>
+											
+											</p:commandButton>
 									</p:column>
 
 								</p:dataTable>
