Arrumar o sql do buscaCidade

--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -33,7 +33,7 @@
 	<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" style="margin-bottom: 40px" />
 	</ui:insert>
 	
-	<a style="background-color:black;"><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nome}</a>
+	<a style="background-color:#4E0000;"><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nome}</a>
 	<p/>
 	<p/>
 	<p/>
@@ -71,8 +71,8 @@
 			onclick="PF('dlg1').show();" />
 	</p:panelGrid>
 
-	<p:dialog header="Basic Dialog" widgetVar="dlg1" minHeight="40">
-    <h:outputText value="Resistance to PrimeFaces is futile!" />
+	<p:dialog header="Ajuda" widgetVar="dlg1" minHeight="40">
+    <h:outputText value="Se tiver algum problema entrar em contato: (19)99999-9999 ou teste@gmail.com" />
 </p:dialog>
 
 
