--- a/src/main/webapp/telas-adm/homeADM.xhtml
+++ b/src/main/webapp/telas-adm/homeADM.xhtml
@@ -24,21 +24,21 @@
 			<p:row>
 				<p:column style="width:50%;height:50%">
 					<p:chart type="line" model="#{chartsMBean.lineModel}"
-						style="height:100%; width:100%;" />
+						style="height:75%; width:75%;;margin-left:10%;margin-right:10%;" />
 				</p:column>
-				<p:column style="width:50%;height:50%">
+				<p:column style="width:50%;height:50%;">
 					<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
-						style="height:100%; width:100%;" />
+						style="height:75%; width:75%;;margin-left:10%;margin-right:10%;" />
 				</p:column>
 			</p:row>
 			<p:row>
 				<p:column style="width:50%;height:50%">
 					<p:chart type="bar" model="#{chartBarMBean.barModel}"
-						style="height:100%; width:100%;" />
+						style="height:75%; width:75%;;margin-left:10%;margin-right:10%;" />
 				</p:column>
 				<p:column style="width:50%;height:50%">
 					<p:chart type="bar" model="#{chartLineMBean.horizontalBarModel}"
-						style="height:100%; width:100%;"/>
+						style="height:75%; width:75%;margin-left:10%;margin-right:10%;"/>
 				</p:column>
 			</p:row>
 			</p:panelGrid>
