--- a/src/main/webapp/telas-empresa/temfiltro.xhtml
+++ b/src/main/webapp/telas-empresa/temfiltro.xhtml
@@ -155,7 +155,7 @@
 						<p />
 
 						<h:commandButton value="Filtrar"
-							action="#{filtroMBean.salvaFiltro}"
+							action="#{filtroMBean.enviarFiltro}"
 							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 					</center>
 				</h:form>
