--- a/src/main/webapp/telas-adm/temfiltroAdm.xhtml
+++ b/src/main/webapp/telas-adm/temfiltroAdm.xhtml
@@ -33,8 +33,7 @@
 									<p />
 
 									<p:outputLabel for="estado" value="Estados:" />
-									<p:selectOneMenu id="estado"
-										value="#{a}" style="width:160px">
+									<p:selectOneMenu id="estado" value="#{a}" style="width:160px">
 										<f:selectItem itemLabel="Estados" itemValue="" />
 										<f:selectItems value="#{a}" />
 									</p:selectOneMenu>
@@ -88,33 +87,6 @@
 									</p:selectOneMenu>
 									<p />
 
-									<h:outputText value="Experiência: " />
-									<p:selectOneRadio required="true" id="experiencia"
-										value="#{filtroMBean.eFiltro.experiencia}">
-										<f:selectItem itemLabel="Sim" itemValue="Sim" />
-										<f:selectItem itemLabel="Não" itemValue="Nao" />
-									</p:selectOneRadio>
-
-									<p />
-
-
-									<h:outputText value="Sexo: " />
-									<p:selectOneRadio required="true" id="sexo"
-										value="#{filtroMBean.eFiltro.sexo}">
-										<f:selectItem itemLabel="Homem" itemValue="Homem" />
-										<f:selectItem itemLabel="Mulher" itemValue="Mulher" />
-										<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
-									</p:selectOneRadio>
-
-									<p />
-									<h:outputText value="Deficiência: " />
-									<p:selectOneRadio required="true" id="deficiencia"
-										value="#{filtroMBean.eFiltro.deficiencia}">
-										<f:selectItem itemLabel="Sim" itemValue="Sim" />
-										<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
-									</p:selectOneRadio>
-
-									<p />
 
 									<h:panelGrid columns="1" style="margin-bottom: 10px">
 
@@ -130,6 +102,34 @@
 										value="#{filtroMBean.eFiltro.idade_fim}" />
 									<p />
 
+
+									<h:outputText value="Experiência: " />
+									<p:selectOneRadio id="experiencia"
+										value="#{filtroMBean.eFiltro.experiencia}">
+										<f:selectItem itemLabel="Sim" itemValue="Sim" />
+										<f:selectItem itemLabel="Não" itemValue="Nao" />
+									</p:selectOneRadio>
+
+									<p />
+
+
+									<h:outputText value="Sexo: " />
+									<p:selectOneRadio id="sexo"
+										value="#{filtroMBean.eFiltro.sexo}">
+										<f:selectItem itemLabel="Homem" itemValue="Homem" />
+										<f:selectItem itemLabel="Mulher" itemValue="Mulher" />
+										<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
+									</p:selectOneRadio>
+
+									<p />
+									<h:outputText value="Deficiência: " />
+									<p:selectOneRadio id="deficiencia"
+										value="#{filtroMBean.eFiltro.deficiencia}">
+										<f:selectItem itemLabel="Sim" itemValue="Sim" />
+										<f:selectItem itemLabel="Indiferente" itemValue="Indiferente" />
+									</p:selectOneRadio>
+
+									<p />
 
 
 
@@ -147,10 +147,57 @@
 
 						<p />
 
+						<!-- AQUI FICA A TELA DE DOWNLOAD DOS CURRICULOS SE O FILTRO FOR PREENCHIDO CORRETAMENTE! -->
+						<h:form id="telaCur" rendered="#{filtroMBean.filtroP}">
+
+							<center>
+								<p:panel value="Login" style="width: 600px">
+
+									<h:graphicImage library="img" name="/logo-senai.png"
+										style="width:300px; margin: 7px;" />
+
+									<p />
+									<p:panel>
+
+										<center>
+
+											<p:dataTable var="cl" value="#{listarCurriculoMBean.cl}">
+
+												<p:column headerText="Nome">
+													<f:facet name="header">Nome do Aluno</f:facet>
+       								 	#{cl.nomeDoAluno}
+										</p:column>
+
+												<p:column id="Download" icon="ui-icon-search"
+													style="width:60px">
+													<h:outputText />
+													<p:commandButton icon="ui-icon-arrowthick-1-s" />
+												</p:column>
+
+												<p:column id="Impressão" style="width:60px">
+													<p:commandButton icon="ui-icon-print" ajax="false"
+														action="#{listarCurriculoMBean.imprimir}"
+														onclick="this.form.target='_blank'">
+
+														<f:setPropertyActionListener value="#{cl}"
+															target="#{listarCurriculoMBean.cur}"></f:setPropertyActionListener>
+
+													</p:commandButton>
+												</p:column>
+
+											</p:dataTable>
+
+										</center>
+									</p:panel>
+								</p:panel>
+							</center>
+
+						</h:form>
+
+
 					</p:panel>
 				</p:panel>
 			</div>
-
 		</center>
 	</ui:define>
 </ui:composition>
