--- a/src/main/webapp/telas-adm/empresasADM.xhtml
+++ b/src/main/webapp/telas-adm/empresasADM.xhtml
@@ -75,9 +75,9 @@
 
 						<h:outputText value="Telefone:" />
 						<h:outputText value="#{tabelaMBean.selectemp.telefone}" />
-
+						
 						<h:outputText value="Cidade:" />
-						<h:outputText value="#{tabelaMBean.selectemp.cidade}" />
+						<h:outputText value="#{tabelaMBean.selectemp.cidadeE.nome}" />
 
 						<h:outputText value="Rua:" />
 						<h:outputText value="#{tabelaMBean.selectemp.rua}" />
