--- a/src/main/webapp/telas-empresa/alterarPerfilEmpresa.xhtml
+++ b/src/main/webapp/telas-empresa/alterarPerfilEmpresa.xhtml
@@ -18,9 +18,6 @@
 			<center>
 				<p:panel value="Login" style="width: 600px">
 
-					<h:graphicImage library="img" name="/logo-senai.png"
-						style="width:300px; margin: 7px;" />
-
 					<p />
 					<p:panel>
 						<h:form>
@@ -34,16 +31,16 @@
 									<p:inputText disabled="true" value="#{usuarioMBean.emp.CNPJ}"
 										style="font-weight: bold;" />
 									<br />
+									<p:outputLabel id="cidade" value="Cidade: " />
+									<p:inputText disabled="true" value="#{usuarioMBean.emp.cidadeE.nome}"
+										style="font-weight: bold;" />
+									<br />
 									<p:outputLabel id="nomeEmp" value="Nome: " />
 									<p:inputText value="#{usuarioMBean.emp.nome}"
 										style="font-weight: bold;" />
 									<br />
 									<p:outputLabel id="representante" value="Representante (a): " />
 									<p:inputText value="#{usuarioMBean.emp.representante}"
-										style="font-weight: bold;" />
-									<br />
-									<p:outputLabel id="cidade" value="Cidade: " />
-									<p:inputText value="#{usuarioMBean.emp.cidade}"
 										style="font-weight: bold;" />
 									<br />
 									<p:outputLabel id="bairro" value="Bairro: " />
