--- a/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
+++ b/src/main/webapp/telas-empresa/perfilEmpresa.xhtml
@@ -14,8 +14,6 @@
 			<center>
 				<p:panel value="Login" style="width: 600px">
 
-					<h:graphicImage library="img" name="/logo-senai.png"
-						style="width:300px; margin: 7px;" />
 
 					<p />
 					<p:panel>
@@ -40,7 +38,7 @@
 										style="font-weight: bold;" />
 									<br />
 									<p:outputLabel id="cidade" value="Cidade: " />
-									<p:inputText disabled="true" value="#{usuarioMBean.emp.cidade}"
+									<p:inputText disabled="true" value="#{usuarioMBean.emp.cidadeE.nome}"
 										style="font-weight: bold;" />
 									<br />
 									<p:outputLabel id="bairro" value="Bairro: " />
