--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -33,7 +33,7 @@
 	<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" style="margin-bottom: 40px" />
 	</ui:insert>
 	
-	<a style="background-color:#4E0000;"><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nome}</a>
+	<a style="background-color:#4E0000;"><i class="fa fa-fw fa-user"></i>#{usuarioMBean.adm.nomex}</a>
 	<p/>
 	<p/>
 	<p/>
