--- a/src/main/webapp/telas-adm/homeADM.xhtml
+++ b/src/main/webapp/telas-adm/homeADM.xhtml
@@ -24,7 +24,7 @@
 			<p:row>
 				<p:column style="width:50%;height:50%">
 					<p:chart type="line" model="#{chartsMBean.lineModel}"
-						style="height:75%; width:75%;;margin-left:10%;margin-right:10%;color:black" />
+						onmouseup="false" style="height:75%; width:75%;;margin-left:10%;margin-right:10%;color:black" />
 				</p:column>
 				<p:column style="width:50%;height:50%;">
 					<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
