--- a/src/main/webapp/telas-adm/homeADM.xhtml
+++ b/src/main/webapp/telas-adm/homeADM.xhtml
@@ -28,8 +28,8 @@
 				</p:column>
 				<p:column style="width:50%;height:50%;">
 					<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
-						style="height:75%; width:75%;;margin-left:10%;margin-right:10%;color:black" />
-				</p:column>
+						style="height:75%;color:white !important;text-shadow:black 1px 1px; width:75%;;margin-left:10%;margin-right:10%;color:black" />
+				</p:column> <!-- TARCISO ARRUMO AQUI REVEJA -->
 			</p:row>
 			<p:row>
 				<p:column style="width:50%;height:50%">
