--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,7 +12,7 @@
 	<p:growl>
 		<p:autoUpdate />
 	</p:growl>
-	<div align="center" style="margin-top: 8%">
+	<div align="center" style="margin-top: 8%;margin-bottom: 7%">
 		<p:panel value="Login" style="width: 600px">
 			<h:graphicImage library="img" name="logo-senai.png"
 				style="width: 500px" />
